--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Harikesh Yadav",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
     "validator": "^13.12.0"
