--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-list-routes": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "validator": "^13.12.0"
